--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										
 										<h2><a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true">Tableau Viualization </a></h2>
 
-										<h3>Covid-19 Viualization Project in Tableau </h3>
+										<h3>Covid-19 Visualization Project in Tableau </h3>
 									</header>
 									<a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true" class="image fit"><img src="images/Tableau_covid.jpg" alt="" /></a>
 									<p>Following the "DATA EXPLORATION IN SQL" project, this visualzation project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
