--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										<h3>Covid-19 Visualization Project in Tableau </h3>
 									</header>
 									<a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true" class="image fit"><img src="images/Tableau_covid.jpg" alt="" /></a>
-									<p>Following the "DATA EXPLORATION IN SQL" project, this visualzation project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
+									<p>Following the "DATA EXPLORATION IN SQL" project, this visualization project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
 										</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true" class="button">View Project</a></li>
