--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true">Tableau Viualization </a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/yi.lun.lai">Tableau Viualization </a></h2>
 
 										<h3>Covid-19 Visualization Project in Tableau </h3>
 									</header>
-									<a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true" class="image fit"><img src="images/Tableau_covid.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/yi.lun.lai" class="image fit"><img src="images/Tableau_covid.jpg" alt="" /></a>
 									<p>Following the "DATA EXPLORATION IN SQL" project, this visualization project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
 										</p>
 									<ul class="actions special">
-										<li><a href="https://docs.google.com/presentation/d/1ZUQqwh2G0cNXVns9t6QjR1KZ_GGfxvvH/edit?usp=sharing&ouid=105835537311167687887&rtpof=true&sd=true" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/yi.lun.lai" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
