--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 										<h3>Nashville Housing in Tableau </h3>
 									</header>
-									<a href="https://github.com/Franceslailai/Data-Cleaning_NashVille_Housing/blob/main/Nashville%20Cleaning.sql" class="image fit"><img src="images/NashVille.jpg" alt="" /></a>
+									<a href="https://github.com/Franceslailai/Data-Cleaning_NashVille_Housing/blob/main/Nashville%20Cleaning.sql" class="image fit"><img src="images/NashVi.jpg" alt="" /></a>
 									<p>In this project, I took raw housing data and transform it in SQL Server to make it more usable for analysis.<br> 
 										</p>
 									<ul class="actions special">
