--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										
 										<h2><a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0">Tableau Visualization </a></h2>
 
-										<h3>Sample Sales Data Visualization Project </h3>
+										<h3>Sample Sales Data  </h3>
 									</header>
 									<a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0" class="image fit"><img src="images/sales_analysis.png" alt="" /></a>
 									<p>Following the "Sales Data Analysis IN SQL" project, this visualzation project is created in Tableau to deliver the interesting findings in the sales dataset.<br> 
