--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0">Tableau Visalization </a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0">Tableau visualzation </a></h2>
 
-										<h3>Covid-19 Visalization Project </h3>
+										<h3>Covid-19 Visualzation Project </h3>
 									</header>
 									<a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0" class="image fit"><img src="images/Tableau_covid.jpg" alt="" /></a>
 									<p>Following the "DATA EXPLORATION IN SQL" project, this visualzation project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
