--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										<h3>Sample Sales Data  </h3>
 									</header>
 									<a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0" class="image fit"><img src="images/sales_analysis.png" alt="" /></a>
-									<p>Following the "Sales Data Analysis IN SQL" project, this visualzation project is created in Tableau to deliver the interesting findings in the sales dataset.<br> 
+									<p>Following the "Sales Data Analysis IN SQL" project, this visualization project is created in Tableau to deliver the interesting findings in the sales dataset.<br> 
 										</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0" class="button">View Project</a></li>
@@ -121,10 +121,10 @@
 										
 										<h2><a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0">Tableau visualzation </a></h2>
 
-										<h3>Covid-19 Visualzation Project </h3>
+										<h3>Covid-19 Visualization Project </h3>
 									</header>
 									<a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0" class="image fit"><img src="images/Tableau_covid.jpg" alt="" /></a>
-									<p>Following the "DATA EXPLORATION IN SQL" project, this visualzation project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
+									<p>Following the "DATA EXPLORATION IN SQL" project, this visualization project is created in Tableau to deliver the insights in the Covid-19 dataset.<br> 
 										</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/yi.lun.lai#!/?newProfile=&activeTab=0" class="button">View Project</a></li>
